// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SummaryCard if \`ratingNumber\` is falsy should return the right structure 1`] = `
<Card
  className="has-summary-card"
  onClick={[Function]}
>
  <CardHeader>
    <Heading
      className={null}
      hasMargin={true}
      isColorInverted={false}
      size="medium"
      textAlign={null}
    >
      La casa d'Argent
    </Heading>
  </CardHeader>
  <FlexContainer
    alignContent={null}
    alignItems="center"
    flexDirection="row"
    flexWrap={null}
    justifyContent={null}
  >
    <Paragraph
      isCompact={false}
      size="medium"
      weight={null}
    >
      Soterrani
    </Paragraph>
  </FlexContainer>
</Card>
`;

exports[`SummaryCard should have the right shape 1`] = `
<Card
  className="has-summary-card"
  onClick={[Function]}
>
  <CardHeader>
    <Heading
      className={null}
      hasMargin={true}
      isColorInverted={false}
      size="medium"
      textAlign={null}
    >
      La casa d'Argent
    </Heading>
  </CardHeader>
  <FlexContainer
    alignContent={null}
    alignItems="center"
    flexDirection="row"
    flexWrap={null}
    justifyContent={null}
  >
    <Rating
      iconSize="tiny"
      isShowingNumeral={true}
      ratingNumber={4.5}
    />
    <Paragraph
      isCompact={false}
      size="medium"
      weight={null}
    >
      Soterrani
    </Paragraph>
  </FlexContainer>
</Card>
`;
